Fixes for deploy

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,8 @@
   <link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3)" href="/splash/apple-launch-1242x2208.png" />
   <!-- iPhone 8, 7, 6s, 6 (750px x 1334px) --> 
   <link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)" href="/splash/apple-launch-750x1334.png" />
+  <!-- Just the splash screen for your test device -->
+  <link rel="apple-touch-startup-image" media="(device-width: 393px) and (device-height: 852px) and (-webkit-device-pixel-ratio: 3)" href="/splash/apple-launch-1179x2556.png" />
 
   <title>Your App Name</title>
 </head>
